add_library(tiro_objects OBJECT)
target_link_libraries(tiro_objects PRIVATE common_flags)

target_link_libraries_system(tiro_objects PUBLIC fmt::fmt utf8::cpp)
target_link_libraries(tiro_objects PUBLIC Boost::boost asio Threads::Threads)

add_subdirectory(ast)
add_subdirectory(bytecode)
add_subdirectory(bytecode_gen)
add_subdirectory(compiler)
add_subdirectory(core)
add_subdirectory(heap)
add_subdirectory(ir)
add_subdirectory(ir_gen)
add_subdirectory(modules)
add_subdirectory(objects)
add_subdirectory(parser)
add_subdirectory(semantics)
add_subdirectory(syntax)
add_subdirectory(vm)

