add_subdirectory(handles)
add_subdirectory(heap)
add_subdirectory(modules)
add_subdirectory(objects)

target_sources(tiro_objects
    PRIVATE
        context.cpp
        context.hpp
        context.ipp
        fwd.hpp
        hash.cpp
        hash.hpp
        interpreter.cpp
        interpreter.hpp
        math.cpp
        math.hpp
        module_registry.cpp
        module_registry.hpp
        types.cpp
        types.hpp
)
