add_subdirectory(handles)
add_subdirectory(heap)
add_subdirectory(modules)
add_subdirectory(object_support)
add_subdirectory(objects)

target_sources(tiro_objects
    PRIVATE
        context.cpp
        context.hpp
        context.ipp
        error_utils.hpp
        fwd.hpp
        hash.cpp
        hash.hpp
        interpreter.cpp
        interpreter.hpp
        math.cpp
        math.hpp
        module_loader.cpp
        module_loader.hpp
        module_registry.cpp
        module_registry.hpp
        type_system.cpp
        type_system.hpp
)
