add_subdirectory(handles)
add_subdirectory(heap)
add_subdirectory(builtins)
add_subdirectory(modules)
add_subdirectory(object_support)
add_subdirectory(objects)

target_sources(tiro_objects
    PRIVATE
        context.cpp
        context.hpp
        error_utils.hpp
        fwd.hpp
        hash.cpp
        hash.hpp
        interpreter.cpp
        interpreter.hpp
        math.cpp
        math.hpp
        root_set.cpp
        root_set.hpp
        root_set.ipp
        type_system.cpp
        type_system.hpp
)
