target_sources(hammer_objects
    PRIVATE
        analyzer.hpp
        binary.hpp
        diagnostics.hpp
        lexer.hpp
        opcodes.hpp
        output.hpp
        parser.hpp
        source_map.hpp
        source_reference.hpp
        string_table.hpp
        token.hpp

    PRIVATE
        analyzer.cpp
        code_builder.cpp
        compiler.cpp
        diagnostics.cpp
        lexer.cpp
        opcodes.cpp
        output.cpp
        parser.cpp
        source_map.cpp
        source_reference.cpp
        string_table.cpp
        token.cpp
)

add_subdirectory(codegen)
