target_sources(tiro_objects
    PRIVATE
        fwd.hpp
        
        build_syntax_tree.cpp
        build_syntax_tree.hpp
        lexer.cpp
        lexer.hpp
        parser_event.cpp
        parser_event.hpp
        parser.cpp
        parser.hpp
        source_range.cpp
        source_range.hpp
        syntax_tree.cpp
        syntax_tree.hpp
        syntax_type.cpp
        syntax_type.hpp
        token_set.cpp
        token_set.hpp
        token.cpp
        token.hpp
)
add_subdirectory(grammar)
